# Group31

./: .gitignore  README.md
Qt_VTK/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  VRRenderThread.cpp  VRRenderThread.h  doxyfile  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgroupdialog.cpp  newgroupdialog.h  newgroupdialog.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
